# Testorosso

./: .CMakeLists.txt.swp  CMakeCache.txt  CMakeLists.txt  Config.h.in  Config.sh  FindTestorosso.cmake  README.md  Testorosso.h  TestorossoConfig.cmake.in  TestorossoConfigVersion.cmake.in  Version.h.in
Src/: Testorosso.cpp
Tools/CMake/: GenConfig.cmake  GenVersion.cmake
